--- a/src/App.css
+++ b/src/App.css
@@ -309,6 +309,8 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  aspect-ratio: 3 / 4;
+  min-height: 400px;
 }
 
 .category-card.chutney-card {
@@ -330,7 +332,7 @@
   width: 120%;
   height: 120%;
   background: url('/images/chutneys_image.png') center/cover no-repeat;
-  filter: blur(3px);
+  filter: blur(2.5px);
   z-index: 0;
 }
 
