--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #8B4000;
+  background: #fff0db;
   min-height: 100vh;
   overflow-x: hidden;
 }
